[package]
name = "pallet-parachain-staking"
version = "0.0.1"
authors = ['BitGreen <https://bitgreen.org>']
edition = "2021"
homepage = "https://bitgreen.org"
license = "Apache-2.0"
description = "Simple staking pallet with a fixed stake"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { default-features = false, features = ["derive"], package = "parity-scale-codec", version = "3.0.0" }
log = { version = "0.4.17", default-features = false }
rand = { version = "0.8.5", features = ["std_rng"], default-features = false }
scale-info = { version = "2.2.0", default-features = false, features = ["derive"] }

frame-support = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.29", default-features = false }
frame-system = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.29", default-features = false }
pallet-authorship = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.29", default-features = false }
pallet-session = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.29", default-features = false }
sp-runtime = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.29", default-features = false }
sp-staking = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.29", default-features = false }
sp-std = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.29", default-features = false }

frame-benchmarking = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.29", default-features = false, optional = true }

[dev-dependencies]
pallet-aura = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.29" }
pallet-balances = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.29" }
pallet-timestamp = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.29" }
sp-consensus-aura = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.29" }
sp-core = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.29" }
sp-io = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.29" }
sp-runtime = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.29" }
sp-tracing = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.29" }

[features]
default = ["std"]
runtime-benchmarks = [
  "frame-benchmarking/runtime-benchmarks",
  "frame-support/runtime-benchmarks",
  "frame-system/runtime-benchmarks",
]
std = [
  "codec/std",
  "log/std",
  "scale-info/std",
  "rand/std",
  "sp-runtime/std",
  "sp-staking/std",
  "sp-std/std",
  "frame-support/std",
  "frame-system/std",
  "frame-benchmarking/std",
  "pallet-authorship/std",
  "pallet-session/std",
]

try-runtime = ["frame-support/try-runtime"]
