[package]
authors = ['BitGreen <https://bitg.org>']
edition = '2018'
homepage = 'https://bitg.org'
license = 'Unlicense'
name = 'pallet-vcu'
description = "Module to tokenize VCU"
repository = 'https://github.com/bitgreen/bitg-node'
version = '0.1.0'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

# alias "parity-scale-code" to "codec"
[dependencies.codec]
default-features = false
features = ['derive']
package = 'parity-scale-codec'
version = '2.0.0'

[dependencies]
frame-support = { default-features = false, version = '3.0.0' }
frame-system = { default-features = false, version = '3.0.0' }
primitives = { package = 'bitg-primitives', path = '../../primitives', default-features = false }
serde = { version = '1', features = ['derive'], optional = true }
sp-runtime = { default-features = false, version = '3.0.0' }
sp-std = { default-features = false, version = '3.0.0' }
pallet-assets = { version = "3.0.0", default-features = false, path = "../assets" }

[dev-dependencies]
serde = { version = "1.0.119" }
sp-core = { default-features = false, version = '3.0.0' }
sp-io = { default-features = false, version = '3.0.0' }


[features]
default = ['std']
std = [
    'serde',
    'codec/std',
    'frame-support/std',
    'frame-system/std',
    'primitives/std',
    'sp-runtime/std',
    'sp-std/std',
    'pallet-assets/std',
]
