[package]
name = 'pallet-vesting-contract'
version = '0.0.1'
authors = ['BitGreen <https://bitgreen.org>']
edition = '2021'
homepage = 'https://bitgreen.org'
license = 'MIT'
repository = 'https://github.com/bitgreen/bitgreen-node'
description = "Vesting contracts for Bitgreen"

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies]
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = ["derive"] }
frame-support = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0", default-features = false }
frame-system = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0", default-features = false }
pallet-balances = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0", default-features = false }
scale-info = { version = "2.0.1", default-features = false, features = ["derive"] }
sp-runtime = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0", default-features = false }
sp-std = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0", default-features = false }

# Benchmarking
frame-benchmarking = { git = "https://github.com/paritytech/polkadot-sdk.git", default-features = false, optional = true, branch = "release-polkadot-v1.1.0" }
pallet-membership = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0", default-features = false }
pallet-timestamp = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0", default-features = false }
sp-core = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0", default-features = false }

[dev-dependencies]
serde = { version = "1.0.188", features = ["derive"] }
sp-io = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0", default-features = false }

[features]
default = ['std']
std = [
  'codec/std',
  'frame-support/std',
  'frame-system/std',
  'sp-std/std',
  'scale-info/std',
  'pallet-balances/std',
  'sp-runtime/std',
]
runtime-benchmarks = [
  "frame-benchmarking/runtime-benchmarks",
  "sp-runtime/runtime-benchmarks",
  "frame-system/runtime-benchmarks",
]
try-runtime = ["frame-support/try-runtime"]
