[package]
name = "runtime-common"
version = "0.7.3"
authors = ["Bitgreen Developers"]
edition = "2018"

[dependencies]
static_assertions = "1.1.0"
serde = { version = "1.0.101", optional = true, default-features = false }
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false }
sp-std = { git = "https://github.com/paritytech/substrate", default-features = false, optional = true, branch = "polkadot-v0.9.18" }
sp-core = { git = "https://github.com/paritytech/substrate", default-features = false, optional = true, branch = "polkadot-v0.9.18" }
sp-runtime = { git = "https://github.com/paritytech/substrate", default-features = false, optional = true, branch = "polkadot-v0.9.18" }
frame-support = { git = "https://github.com/paritytech/substrate", default-features = false, optional = true, branch = "polkadot-v0.9.18" }
frame-system = { git = "https://github.com/paritytech/substrate", default-features = false, optional = true, branch = "polkadot-v0.9.18" }
pallet-scheduler = { git = "https://github.com/paritytech/substrate", default-features = false, optional = true, branch = "polkadot-v0.9.18" }

orml-traits =  { git = "https://github.com/open-web3-stack/open-runtime-module-library.git", rev = "2b5d4ce", default-features = false }

primitives = { package = "bitg-primitives", path = "../../primitives", default-features = false }

[dev-dependencies]
serde_json = "1.0.41"
hex-literal = "0.3.1"
sp-io = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.18", default-features = false }
pallet-timestamp = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.18", default-features = false }
pallet-balances = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.18", default-features = false }
pallet-proxy = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.18", default-features = false }
pallet-utility = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.18", default-features = false }
orml-tokens =  { git = "https://github.com/open-web3-stack/open-runtime-module-library.git", rev = "2b5d4ce", default-features = false }

[features]
default = ["std"]
std = [
	"serde",
	"codec/std",
	"sp-core/std",
	"sp-std/std",
	"sp-runtime/std",
	"frame-support/std",
	"frame-system/std",
	"pallet-scheduler/std",
	"orml-traits/std",
	"primitives/std",
]
with-ethereum-compatibility = []
